tests/negative/typecheck/args_named_annot.orng
// args_named_annot.orng:6:31: error: expected a value of type `Int`
//     let x: (a: Int) = (.a = 4, .b = 4)
//                              ^
// 
fn main() -> Int {
    let x: (a: Int) = (.a = 4, .b = 4)
    0
}